# amd-sev-snp-attestation-sdk

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  go.mod  go.sum
contracts/: .env.example  .gitignore  foundry.toml
contracts/deployments/: 1398243.json  embed.go
contracts/script/: Configure.s.sol  Deploy.s.sol
contracts/src/: SEVAgentAttestation.sol
contracts/src/bases/: CertCacheBase.sol
contracts/src/interfaces/: ISnpAttestation.sol
contracts/src/pico/: Groth16Verifier.sol  IPicoVerifier.sol  PicoVerifier.sol
contracts/src/types/: SevSnpTypes.sol
contracts/src/utils/: BytesUtils.sol  X509Helper.sol
contracts/test/: PicoGroth16Setup.sol  RiscZeroGroth16Setup.sol  SEVAgentTest.t.sol  SuccinctGroth16Setup.sol
contracts/test/assets/: ark-genoa.der  boundless_azure.json  pico-inputs.json  sp1_gcp.json
crates/pico-methods/: Cargo.toml
crates/pico-methods/pico-verifier/: Cargo.toml
crates/pico-methods/pico-verifier/src/: main.rs
crates/pico-methods/src/: lib.rs
crates/prover/: Cargo.toml
crates/prover/src/: contract.rs  kds.rs  lib.rs  program.rs  program_pico.rs  program_risc0.rs  program_sp1.rs  prover.rs  prover_types.rs  utils.rs
crates/risc0-methods/: Cargo.toml  build.rs
crates/risc0-methods/elf/: risc0-verifier-elf
crates/risc0-methods/risc0-verifier/: Cargo.toml
crates/risc0-methods/risc0-verifier/src/: main.rs
crates/risc0-methods/src/: lib.rs
crates/sev-snp/: Cargo.toml  Makefile  README.md  build.rs
crates/sev-snp/c/: Makefile  README.md  main.c
crates/sev-snp/examples/: attestation.rs  key.rs
crates/sev-snp/src/: cpu.rs  device.rs  error.rs  kds.rs  key.rs  report.rs  utils.rs  verifier.rs
crates/snp-attest-cli/: Cargo.toml
crates/snp-attest-cli/src/: debug.rs  main.rs  program_id.rs  proof.rs  prove.rs  upload.rs  utils.rs
crates/sp1-methods/: Cargo.toml  build.rs
crates/sp1-methods/sp1-verifier/: Cargo.toml
crates/sp1-methods/sp1-verifier/src/: main.rs
crates/sp1-methods/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/utils/src/wasm/: mod.rs  wrapper.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: attestation.rs  lib.rs  stub.rs  types.rs  verifier.rs  verify.rs
crates/x509-verifier-rust-crypto/: Cargo.toml
crates/x509-verifier-rust-crypto/samples/: android-attestation.pem  apple_ios_der_ec.json  azure_snp_vek_cert.json  gcp_snp_tpm_cert.json  gcp_snp_vek_cert.json  gcp_snp_vek_cert_broken!!!.json  gcp_tdx_tpm_cert.json  short_sig.json  vcek.der  vcek.hex
crates/x509-verifier-rust-crypto/src/: cert.rs  constants.rs  lib.rs  sign.rs
samples/: attestation_azure_snp.json  attestation_gcp_snp.json  risc0_program_id.json  sp1_program_id.json
scripts/: deploy_contracts.sh
sev-snp/: Cargo.toml
sev-snp/src/: certs.rs  error.rs  lib.rs
