[workspace]
resolver = "2"
members = [
    "crates/snp-attest-cli",
    "crates/prover",
    "crates/verifier",
    "crates/risc0-methods",
    "crates/sp1-methods",
    "crates/sp1-methods/sp1-verifier",
    "crates/pico-methods",
    "crates/pico-methods/pico-verifier",
    "crates/sev-snp",
]
default-members = [
    "crates/snp-attest-cli",
    "crates/prover",
    "crates/verifier",
    "crates/risc0-methods",
    "crates/sp1-methods",
    "crates/sev-snp",
]

[workspace.package]
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = "thin"

[workspace.dependencies]
amd-sev-snp-attestation-prover = { path = "crates/prover", default-features = false }
amd-sev-snp-attestation-verifier = { path = "crates/verifier", default-features = false }
x509-verifier-rust-crypto = { path = "crates/x509-verifier-rust-crypto" }
risc0-methods = { path = "crates/risc0-methods" }
sp1-methods = { path = "crates/sp1-methods" }
pico-methods = { path = "crates/pico-methods" }

clap = { version = "4.0", features = ["derive", "env"] }
anyhow = { version = "1", features = ["backtrace"] }
alloy-sol-types = "1.0"
serde_cbor = "0.11"
serde = "1.0"
byteorder = "1.3.4"
serde_with = { version = "1.9.4", default-features = false }
serde_bytes = "0.11"
base64 = "0.22.1"

risc0-zkvm = { version = "^3.0.3", default-features = false }
risc0-build = { version = "^3.0.3" }
boundless-market = "1.1.0"
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v3.0.1" }

hex = "0.4"
sp1-zkvm = "5.2.1"
sp1-sdk = { version = "5.2.1", default-features = false, features = ["network"] }
sp1-build = "5.2.1"
pico-sdk = { git = "https://github.com/brevis-network/pico", tag = "v1.1.6" }
pico-vm = { git = "https://github.com/brevis-network/pico", tag = "v1.1.6" }
alloy-primitives = { version = "1.2", default-features = false }
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.27"
bincode = "1.3.3"
serde_json = "1"
async-trait = "0.1.88"
alloy-provider = "1.0.17"
alloy-network = "1.0.17"
alloy-rpc-types = "1.0.17"
alloy-signer-local = "1.0.17"
tracing = "0.1.41"
crossbeam = "0.8.4"
lazy_static = "1.5.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
dotenvy = "0.15"