[package]
name = "amd-sev-snp-attestation-prover"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["risc0", "sp1"]
sp1 = ["dep:sp1-sdk", "dep:sp1-methods"]
risc0 = ["dep:risc0-zkvm", "dep:risc0-methods", "dep:boundless-market"]
pico = ["dep:pico-sdk", "dep:pico-vm", "dep:pico-methods", "dep:p3-field"]

[dependencies]
anyhow.workspace = true
amd-sev-snp-attestation-verifier.workspace = true
x509-verifier-rust-crypto.workspace = true
risc0-zkvm = { workspace = true, optional = true, default-features = true }
risc0-methods = { workspace = true, optional = true }
sp1-methods = { workspace = true, optional = true }
sp1-sdk = { workspace = true, optional = true, default-features = false, features = ["network"] }
pico-methods = { workspace = true, optional = true }
pico-sdk = { workspace = true, optional = true }
pico-vm = { workspace = true, optional = true }
p3-field = { git = "https://github.com/brevis-network/Plonky3.git", rev = "a4d376b", optional = true }
alloy-primitives.workspace = true
boundless-market = { workspace = true, optional = true }
tokio.workspace = true
log.workspace = true
serde.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }
bincode.workspace = true
risc0-ethereum-contracts = { workspace = true, features = ["unstable"] }
serde_json.workspace = true
alloy-provider = { workspace = true }
alloy-network = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer-local = { workspace = true }
tracing.workspace = true
crossbeam.workspace = true
lazy_static.workspace = true
reqwest.workspace = true