[package]
name = "sev-snp"
version = "0.3.0"
edition = "2021"
description = "Automata AMD SEV-SNP library"
readme = "README.md"
keywords = ["amd", "sev", "sev-snp", "snp"]

[lib]
name = "sev_snp"
crate-type = ["rlib", "cdylib"]

[features]
default = ["legacy", "configfs", "tpm"]
legacy = ["dep:coco-provider", "coco-provider/legacy"]
configfs = ["dep:coco-provider", "coco-provider/legacy", "coco-provider/configfs"]
tpm = ["dep:coco-provider", "coco-provider/tpm"]
clib = ["dep:once_cell", "legacy", "configfs", "tpm"]
coco-provider = ["dep:coco-provider"]

[build-dependencies]
cbindgen = "0.29.0"

[profile.release]
lto = true

[dependencies]
coco-provider = { git = "https://github.com/automata-network/coco-provider-sdk", optional = true, default-features = false }
openssl = { version = "^0.10", features = ["vendored"]}
serde = { version = "1.0.217", features = ["derive"] }
serde-big-array = "0.5.1"
bincode = "^1.2.1"
rand = "0.8.5"
x509-parser = { version="0.16.0", features=["verify"] }
asn1-rs = "0.6.2"
hex = "0.4"
ureq = "2.12.1"
sysinfo = "0.33.1"
bitfield = "0.19.1"
once_cell = { version = "1.20.2", optional=true }
