[package]
name = "x509-verifier-rust-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
pico = ["dep:sha2_pico"]
sp1 = ["dep:p256_sp1", "dep:sha2_sp1"]
sp1_rsa = ["dep:rsa_sp1"]
risc0 = ["dep:sha2_risc0"]
risc0_unstable = ["risc0", "dep:p256_risc0", "risc0_rsa"]
risc0_rsa = ["dep:rsa_risc0"]

[dependencies]
p384 = { version = "0.13.0" }

p256 = { version = "0.13.2" }
p256_sp1 = { git = "https://github.com/sp1-patches/elliptic-curves", rev = "patch-p256-13.2-sp1-5.0.0", package = "p256", optional = true }
p256_risc0 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1", package = "p256", optional = true }

sha2 = { version = "0.10.8", features = ['oid'] }
sha2_pico = { git = "https://github.com/brevis-network/hashes", tag = "pico-patch-v1.0.1-sha2-v0.10.8", package = "sha2", features = ['oid'], optional = true }
sha2_sp1 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-sha2-v0.10.8", package = "sha2", features = ['oid'], optional = true }
sha2_risc0 = { git = "https://github.com/risc0/RustCrypto-hashes", rev = "sha2-v0.10.8-risczero.0", package = "sha2", features = ['oid'], optional = true }

rsa = { version = "0.9.6" }
rsa_sp1 = { git = "https://github.com/sp1-patches/RustCrypto-RSA", branch = "patch-rsa-v0.9.6", package = "rsa", optional = true }
rsa_risc0 = { git = "https://github.com/risc0/RustCrypto-RSA", branch = "risc0", package = "rsa", optional = true }

x509-parser = "0.16.0"
oid = "0.2.1"
hex = "0.4.3"
anyhow = { version = "1", features = ["backtrace"] }
alloy-primitives = { version = "1.2", default-features = false }

[dev-dependencies]
serde_json = "1"