[package]
name = "risc0-verifier"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ["std"] }
amd-sev-snp-attestation-verifier = { path = "../../verifier/", features = ["risc0"] }
hex = { version = "0.4" }
x509-verifier-rust-crypto = { path = "../../x509-verifier-rust-crypto" }
anyhow = { version = "1" }
alloy-sol-types = { version = "=1.3.1" }  # Pin to match main workspace