[package]
name = "sp1-verifier"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
sp1-zkvm = { version = "^5.0.0" }
amd-sev-snp-attestation-verifier = { path = "../../verifier/", features = ["sp1"] }
hex = { version = "0.4" }
x509-verifier-rust-crypto = { path = "../../x509-verifier-rust-crypto" }
anyhow = { version = "1" }
alloy-sol-types = { version = "=1.3.1" }  # Pin to match main workspace